nautobot/project-static/css/base.css
/* Layout */
* {
    margin: 0;
}
html {
    overflow-y: scroll;
}
html, body {
    height: 100%;
    overflow: auto;
}
body {
    padding-top: 70px;
}
.wrapper {
    min-height: 100%;
    height: auto !important;
    margin: 0 auto -48px; /* the bottom margin is the negative value of the footer's height */
    padding-bottom: 30px;
}
.navbar-brand {
    padding: 12px 15px 8px;
}
.footer, .push {
    height: 48px; /* .push must be the same height as .footer */
}
.footer {
    background-color: #f5f5f5;
    border-top: 1px solid #d0d0d0;
}
footer p {
    margin: 12px 0;
}
#navbar_search {
    padding: 0 8px;
}
.right-side-panel {
    max-width: 400px;
    min-width: 300px;
    padding-right: 0;
}

/* Hide the username in the navigation menu on displays less than 1470px wide */
@media (max-width: 1469px) {
    #navbar_user {
        display: none;
    }
}

/* Hide the search bar in the navigation menu on displays less than 1384px wide */
@media (max-width: 1383px) {
    #navbar_search {
        display: none;
    }
}

/* Printer friendly CSS class and various fixes for printing. */
@media print {
    body {
        padding-top: 0px;
    }
    a[href]:after {
        content: none !important;
    }
    .noprint {
        display: none !important;
    }
}

/* Scroll the drop-down menus at or above 768px wide to match bootstrap's behavior for hiding dropdown menus */
@media (min-width: 768px) {
    .navbar-nav > li > ul {
        max-height: calc(80vh - 50px);
        overflow-y: auto;
    }
}

/* Collapse the nav menu on displays less than 1180px wide */
@media (max-width: 1179px) {
    #navbar {
        max-height: calc(80vh - 50px);
        overflow-y: auto;
    }
    .navbar-header {
        float: none;
    }
    .navbar-left, .navbar-right {
        float: none !important;
    }
    .navbar-toggle {
        display: block;
    }
    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
    }
    .navbar-fixed-top {
        top: 0;
        border-width: 0 0 1px;
    }
    .navbar-collapse.collapse {
        display: none !important;
        max-height: none;
    }
    .navbar-nav {
        float: none !important;
        margin-top: 7.5px;
    }
    .navbar-nav > li {
        float: none;
    }
    .navbar-nav > li > a {
        padding-top: 10px;
        padding-bottom: 10px;
    }
    .collapse.in {
        display: block !important;
    }
    #navbar_user {
        display: inline;
    }
}

/* Navigation menu */
ul.dropdown-menu {
    min-width: 250px;
}
ul.dropdown-menu.edge {
    right: 0;
    left: auto;
}
ul.dropdown-menu div.buttons {
    padding-right: 10px;
    padding-top: 2px;
}
ul.dropdown-menu > li > a {
    clear: left;
    margin-right: 80px
}
.nav > li > a.dropdown-toggle {
    padding: 15px 12px;
}

/* Forms */
label {
    font-weight: normal;
}
label.required {
    font-weight: bold;
}
input[name="pk"] {
    margin-top: 0;
}


/* Tables */
th.pk, td.pk {
    padding-bottom: 6px;
    padding-top: 10px;
    width: 30px;
}
tfoot td {
    font-weight: bold;
}
table.attr-table td:nth-child(1) {
    width: 25%;
}
.table-headings th {
    background-color: #f5f5f5;
}
td.min-width {
    width: 1%;
}

/* Paginator */
div.paginator {
    margin-bottom: 20px;
}
div.paginator form {
    margin-bottom: 6px;
}
nav ul.pagination {
    margin-top: 0;
    margin-bottom: 8px !important;
}

/* Devices */
table.component-list td.subtable {
    padding: 0;
    padding-left: 16px;
}
table.component-list td.subtable td {
    border: none;
    padding-bottom: 6px;
    padding-top: 6px;
}

/* Reports */
table.reports td.method {
    font-family: monospace;
    padding-left: 30px;
}
td.report-stats label {
    display: inline-block;
    line-height: 14px;
    margin-bottom: 0;
    min-width: 40px;
}
table.report th {
    position: relative;
}
table.report th a {
    position: absolute;
    top: -51px;
}

/* Rendered Markdown */
.rendered-markdown table {
    width: 100%;
}
.rendered-markdown th {
    border-bottom: 2px solid #dddddd;
    padding: 8px;
}
.rendered-markdown td {
    border-top: 1px solid #dddddd;
    padding: 8px;
}
.rendered-markdown :last-child {
    margin-bottom: 0;
}

/* Cable tracing */
.cable-trace {
    max-width: 600px;
    margin: 16px auto;
    text-align: center;
}
.cable-trace .node {
    background-color: #f0f0f0;
    border: 1px solid #909090;
    border-radius: 8px;
    padding: 24px 16px;
    position: relative;
    z-index: 1;
}
.cable-trace .termination {
    background-color: #f7f7f7;
    border: 1px solid #909090;
    border-radius: 4px;
    margin: -16px auto;
    padding: 12px;
    position: relative;
    width: 60%;
    z-index: 2;
}
.cable-trace .active {
    border: 3px solid #30C030;
}
.cable-trace .cable {
    border-left-style: solid;
    border-left-width: 4px;
    margin: 12px 0 12px 50%;
    padding: 24px;
    text-align: left;
    width: 50%;
}
.cable-trace .trace-end {
    margin-top: 48px;
    text-align: center;
}

/* Admonition (docs) */
.admonition {
    margin-bottom: 10px;
    padding-bottom: 2px;
}
.admonition p {
    padding: 0 12px;
}
.admonition pre {
    margin: 0 12px 10px;
}
.admonition p.admonition-title {
    color: rgb(255, 255, 255);
    font-weight: bold;
    padding: 4px 12px;
}
.admonition p.admonition-title::before {
    content: "\f06a";
    font-family: "FontAwesome";
    margin-right: 4px;
}
/* Admonition - Note */
.admonition.note {
    background-color: rgb(231, 242, 250);
}
.admonition.note .admonition-title {
    background-color: rgb(106, 176, 222);
}
.admonition.note .admonition-title::before {
    content: "\f05a";
}
/* Admonition - Warning */
.admonition.warning {
    background-color: rgb(255, 237, 204);
}
.admonition.warning .admonition-title {
    background-color: rgb(240, 179, 126);
}
.admonition.warning .admonition-title::before {
    content: "\f06a";
}
/* ... */

